[package]
name = "atomecs"
version = "0.4.0"
authors = ["Pi-sun <37469116+Pi-sun@users.noreply.github.com>", "ElliotB256 <7041164+ElliotB256@users.noreply.github.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
rayon = "1.3.0"
specs={ version="0.14.0", features=["rayon"] }
specs-derive = "0.4.0"
rand = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.9"
assert_approx_eq = "1.1.0"
nalgebra = { version = "0.18", features = ["serde-serialize"] }
csv = "1.1"
byteorder = "1.3.2"

[dev-dependencies]
gnuplot="0.0.31"
criterion = "0.3"

[[bench]]
name = "rate_calculation"
harness = false

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false