[package]
name = "atomecs"
description = "An data-oriented simulation package for cold atom experiments."
homepage = "https://github.com/TeamAtomECS/AtomECS"
repository = "https://github.com/TeamAtomECS/AtomECS"
version = "0.7.0"
authors = ["Pi-sun <37469116+Pi-sun@users.noreply.github.com>", "ElliotB256 <7041164+ElliotB256@users.noreply.github.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["physics", "cold-atoms", "amop", "laser-cooling", "ecs"]

[dependencies]
atomecs-derive = "0.1.0"
rayon = "1.5.0"
specs={ version="0.17.0", features=["rayon"] }
specs-derive = "0.4.1"
rand = "0.8.3"
rand_distr = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.9"
assert_approx_eq = "1.1.0"
nalgebra = { version = "0.29.0", features = ["serde-serialize"] }
csv = "1.1"
byteorder = "1.3.2"
multimap = "0.8.2"
hashbrown = { version = "0.11.2", features = ["rayon"] }
serde_arrays = "0.1.0"

[dev-dependencies]
gnuplot="0.0.37"
criterion = "0.3"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false
